<?xml version="1.0" encoding="utf-8"?>
<resources>
        <!-- App initial details -->
    <string name="app_name">Ten Seconds To Symmetry</string>
    <string name="app_start"> Start Game </string>
    <string name="app_time"> 0 </string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.stuin.tenseconds</string>

        <!-- Drawer initial menu -->
    <string name="drawer_rate">Rate App</string>
	<string name="drawer_credits">Credits</string>
    <string name="drawer_back">Background</string>
    <string name="drawer_music">Music</string>

        <!-- Drawer gameplay menu -->
	<string name="drawer_tutor">Tutorial</string>
    <string name="drawer_versus">Versus</string>
    <string name="drawer_hexmode">Hex Mode</string>
    <string name="drawer_expert">Expert</string>
    <string name="drawer_stats">Level %1$d\nPlayed %2$ds\nTop %3$d</string>
    <string name="drawer_quit">Quit Game</string>

        <!-- Drawer WIP options -->
    <string name="drawer_play_in">Sign In</string>
    <string name="drawer_play_out">Sign Out</string>
    <string name="drawer_blind">Colorblind</string>

        <!-- Second Drawer pages -->
    <string name="second_back">Back</string>
    <string name="second_versus">Challenge a friend,\nTop vs Bottom.\nRun until neither\ncan continue.</string>

        <!-- Second credits page -->
    <string name="second_credits">App Made by\nStuart Irwin</string>
    <string name="second_credits_changelog">Changelog</string>
	<string name="second_credits_website">Website</string>
	<string name="second_credits_url">http://stuin.github.io</string>
	<string name="second_credits_music">With Music by\nCoated Polecat</string>
	<string name="second_credits_musicsite">Soundcloud</string>
	<string name="second_credits_soundcloud">https://m.soundcloud.com/coatedpolecat</string>

        <!-- Second Rating dialog -->
    <string name="second_rate">Would you\nlike to rate\nthis app?\nGive it lots\nof stars!</string>
    <string name="second_rate_accept">Yes</string>
    <string name="second_rate_decline">Not Now</string>

        <!-- Changelog -->
    <string name="changelog_title">Important changes:</string>
    <string name="changelog_button">OK</string>
    <string name="changelog_text">
        -Scoring revised to use more clear formulas\n
        -Level arrangement returned to older accelerated version\n
        -High scores changed to approximate new system\n
        -Changelog message added upon update\n
        -Added various current stats to menu\n
        -Multiple background fixes\n
    </string>

        <!-- Game button messages -->
    <string-array name="app_labels">
        <item>Game Lost:" "</item>
        <item>Complete:" "</item>

        <item>New High Score</item>
        <item>High Score:" "</item>

        <item>Next Round</item>
        <item>Restart</item>
    </string-array>

        <!-- Alternate versus messages -->
    <string-array name="app_versus">
        <item>You Win:" "</item>
        <item>You Lose:" "</item>
        <item>Tie:" "</item>
    </string-array>

        <!-- Game tutorial messages -->
    <string-array name="app_tutor">
        <item>Just tap the changed square,</item>
        <item>Every level is unique,</item>
        <item>They grow as you progress,</item>
        <item>So go fast for higher score,</item>
        <item>And keep an eye on the timer.</item>
    </string-array>
</resources>
