<?xml version="1.0" encoding="utf-8"?>
<com.stuin.tenseconds.Menu.Drawer
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/Drawer_Layout"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:background="@color/app_menu"
		android:gravity="center"
		android:padding="10dp"
		android:visibility="visible"
		android:onClick="drawer">

	<!-- Initial Drawer menu -->
	<LinearLayout
			android:id="@+id/Drawer_First"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:gravity="center"
			android:orientation="vertical">
		<TextView
				style="@style/style_line"/>
		<ToggleButton
				android:id="@+id/Drawer_Background"
				style="@style/style_button"
				android:textOn="@string/drawer_back"
				android:textOff="@string/drawer_back"/>
		<ToggleButton
				android:id="@+id/Drawer_Music"
				style="@style/style_button"
				android:textOn="@string/drawer_music"
				android:textOff="@string/drawer_music"/>
		<Button
				android:id="@+id/Drawer_Credits"
				style="@style/style_button"
				android:text="@string/drawer_credits"/>
		<TextView
				style="@style/style_line"/>

		<!-- Drawer game mode menu -->
		<LinearLayout
				android:id="@+id/Drawer_Game_Modes"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical">
			<Button
					android:id="@+id/Drawer_Game_Tutorial"
					style="@style/style_button"
					android:text="@string/drawer_tutor"/>
			<Button
					android:id="@+id/Drawer_Game_Versus"
					style="@style/style_button"
					android:text="@string/drawer_versus"/>
			<ToggleButton
					android:id="@+id/Drawer_Game_Hexmode"
					style="@style/style_button"
					android:textOn="@string/drawer_hexmode"
					android:textOff="@string/drawer_hexmode"/>
			<ToggleButton
					android:id="@+id/Drawer_Game_Expert"
					style="@style/style_button"
					android:textOn="@string/drawer_expert"
					android:textOff="@string/drawer_expert"/>
		</LinearLayout>

		<!-- Drawer In game menu -->
		<LinearLayout
				android:id="@+id/Drawer_Game_In"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical">
			<TextView
					android:id="@+id/Drawer_Game_Stats"
					style="@style/style_text"
					android:text=""/>
			<Button
					android:id="@+id/Drawer_Game_Quit"
					style="@style/style_button"
					android:text="@string/drawer_quit"/>
		</LinearLayout>
		<TextView
				style="@style/style_line"/>
	</LinearLayout>

	<!-- Credits page -->
	<LinearLayout
			android:id="@+id/Drawer_Second"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_centerVertical="true"
			android:orientation="vertical"
			android:visibility="gone">
		<TextView
				style="@style/style_line"/>
		<Button
				android:id="@+id/Second_Back"
				style="@style/style_button"
				android:text="@string/second_back"/>
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical">
			<TextView
					style="@style/style_line"/>
			<TextView
					android:id="@+id/Drawer_Version"
					style="@style/style_text"
					android:text=""/>
			<Button
					android:id="@+id/Drawer_Changelog"
					style="@style/style_button"
					android:text="@string/second_credits_changelog"/>
			<TextView
					style="@style/style_line"/>
			<TextView
					style="@style/style_text"
					android:text="@string/second_credits"/>
			<Button
					android:id="@+id/Second_Website"
					style="@style/style_button"
					android:text="@string/second_credits_website"/>
			<Button
					android:id="@+id/Drawer_Rate"
					style="@style/style_button"
					android:text="@string/drawer_rate"/>
			<TextView
					style="@style/style_line"/>
			<TextView
					style="@style/style_text"
					android:text="@string/second_credits_music"/>
			<Button
					android:id="@+id/Second_Soundcloud"
					style="@style/style_button"
					android:text="@string/second_credits_musicsite"/>
			<TextView
					style="@style/style_line"/>
		</LinearLayout>

		<!-- Rating dialog -->
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical">
			<TextView
					style="@style/style_line"/>
			<TextView
					style="@style/style_text"
					android:text="@string/second_rate"/>
			<TextView
					style="@style/style_line"/>
			<Button
					android:id="@+id/Second_Accept"
					style="@style/style_button"
					android:text="@string/second_rate_accept"/>
			<Button
					android:id="@+id/Second_Decline"
					style="@style/style_button"
					android:text="@string/second_rate_decline"/>
			<TextView
					style="@style/style_line"/>
		</LinearLayout>

		<!-- Versus start page -->
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical">
			<TextView
					style="@style/style_line"/>
			<TextView
					style="@style/style_text"
					android:text="@string/second_versus"/>
			<TextView
					style="@style/style_line"/>
			<Button
					android:id="@+id/Second_Versus"
					style="@style/style_button"
					android:text="@string/app_start"/>
			<TextView
					style="@style/style_line"/>
		</LinearLayout>
	</LinearLayout>
</com.stuin.tenseconds.Menu.Drawer>