<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:stuin="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Main_Layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="drawer"
        android:background="@color/app_background">

        <!-- Background sliding effects -->
    <com.stuin.tenseconds.Menu.Background
            android:id="@+id/Top_Background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            stuin:top="true">
    </com.stuin.tenseconds.Menu.Background>
    <com.stuin.tenseconds.Menu.Background
            android:id="@+id/Bot_Background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
    </com.stuin.tenseconds.Menu.Background>

        <!-- Main game text -->
    <TextView
            android:id="@+id/Top_Text"
            style="@style/style_text"
			android:gravity="left"
            android:text="@string/app_name"
            android:layout_alignParentTop="true"/>
    <Button
            android:id="@+id/Bot_Button"
            style="@style/style_background"
            android:background="@drawable/button"
            android:layout_alignParentBottom="true"
            android:onClick="startGame"
            android:text="@string/app_start"/>

        <!-- Alternate versus text -->
    <TextView
            android:id="@+id/Bot_Text"
            style="@style/style_text"
            android:layout_alignParentBottom="true"
            android:visibility="gone"/>

        <!-- Game contents -->
    <com.stuin.tenseconds.Game.Player
            style="@style/style_base"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Main_Player"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <!-- Top cell grid -->
        <com.stuin.tenseconds.Game.Grid
                android:id="@+id/Top_Grid"
                style="@style/style_base"
                android:layout_marginBottom="10dp"
                stuin:top="true"
                android:visibility="gone">
        </com.stuin.tenseconds.Game.Grid>

            <!-- Center game timer -->
        <com.stuin.tenseconds.Game.Timer
                style="@style/style_background"
                android:padding="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Bar_Layout"
				android:onClick="drawer">

                <!-- Normal timer system -->
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
					android:visibility="invisible">
                <TextView
                        android:id="@+id/Bar_Left"
                        style="@style/style_text"
                        android:text="@string/app_time"
                        android:gravity="end"/>
                <ProgressBar
                        android:id="@+id/Bar_Progress"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:max="1000"
                        android:progressDrawable="@drawable/progressbar"/>
                <TextView
                        android:id="@+id/Bar_Right"
                        style="@style/style_text"
                        android:text="@string/app_time"
                        android:gravity="start"/>
            </LinearLayout>

                <!-- Alternate sliding text -->
            <TextView
                    android:id="@+id/Bar_Text"
                    style="@style/style_text"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
        </com.stuin.tenseconds.Game.Timer>

            <!-- Bottom cell grid -->
        <com.stuin.tenseconds.Game.Grid
                android:id="@+id/Bot_Grid"
                style="@style/style_base"
                android:layout_marginTop="10dp"
                android:visibility="gone">
        </com.stuin.tenseconds.Game.Grid>
    </com.stuin.tenseconds.Game.Player>

        <!-- Drawer corner button -->
    <FrameLayout
            android:id="@+id/Drawer_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="drawer">

        <ImageView
                style="@style/style_menu"
                android:contentDescription="@string/app_time"
                android:background="@mipmap/menu"
                android:alpha=".25"/>
    </FrameLayout>

        <!-- Drawer menu -->
    <include
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            layout="@layout/drawer_layout"/>
</RelativeLayout>

